welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: ')' expected but ',' found.
for (nb<-1 to getMondeLargeur, nb2<-0 to T.length-1) {
                             ^Array1:19: error: illegal start of simple expression
} 
^